chapter2/y.output
Grammar

    0 $accept: input $end

    1 input: expr '\n'

    2 expr: expr '+' term
    3     | expr '-' term
    4     | term

    5 term: term '*' factor
    6     | term '/' factor
    7     | factor

    8 factor: 'i'
    9       | '(' expr ')'


Terminals, with rules where they appear

$end (0) 0
'\n' (10) 1
'(' (40) 9
')' (41) 9
'*' (42) 5
'+' (43) 2
'-' (45) 3
'/' (47) 6
'i' (105) 8
error (256)


Nonterminals, with rules where they appear

$accept (11)
    on left: 0
input (12)
    on left: 1, on right: 0
expr (13)
    on left: 2 3 4, on right: 1 2 3 9
term (14)
    on left: 5 6 7, on right: 2 3 4 5 6
factor (15)
    on left: 8 9, on right: 5 6 7


state 0

    0 $accept: . input $end

    'i'  shift, and go to state 1
    '('  shift, and go to state 2

    input   go to state 3
    expr    go to state 4
    term    go to state 5
    factor  go to state 6


state 1

    8 factor: 'i' .

    $default  reduce using rule 8 (factor)


state 2

    9 factor: '(' . expr ')'

    'i'  shift, and go to state 1
    '('  shift, and go to state 2

    expr    go to state 7
    term    go to state 5
    factor  go to state 6


state 3

    0 $accept: input . $end

    $end  shift, and go to state 8


state 4

    1 input: expr . '\n'
    2 expr: expr . '+' term
    3     | expr . '-' term

    '\n'  shift, and go to state 9
    '+'   shift, and go to state 10
    '-'   shift, and go to state 11


state 5

    4 expr: term .
    5 term: term . '*' factor
    6     | term . '/' factor

    '*'  shift, and go to state 12
    '/'  shift, and go to state 13

    $default  reduce using rule 4 (expr)


state 6

    7 term: factor .

    $default  reduce using rule 7 (term)


state 7

    2 expr: expr . '+' term
    3     | expr . '-' term
    9 factor: '(' expr . ')'

    '+'  shift, and go to state 10
    '-'  shift, and go to state 11
    ')'  shift, and go to state 14


state 8

    0 $accept: input $end .

    $default  accept


state 9

    1 input: expr '\n' .

    $default  reduce using rule 1 (input)


state 10

    2 expr: expr '+' . term

    'i'  shift, and go to state 1
    '('  shift, and go to state 2

    term    go to state 15
    factor  go to state 6


state 11

    3 expr: expr '-' . term

    'i'  shift, and go to state 1
    '('  shift, and go to state 2

    term    go to state 16
    factor  go to state 6


state 12

    5 term: term '*' . factor

    'i'  shift, and go to state 1
    '('  shift, and go to state 2

    factor  go to state 17


state 13

    6 term: term '/' . factor

    'i'  shift, and go to state 1
    '('  shift, and go to state 2

    factor  go to state 18


state 14

    9 factor: '(' expr ')' .

    $default  reduce using rule 9 (factor)


state 15

    2 expr: expr '+' term .
    5 term: term . '*' factor
    6     | term . '/' factor

    '*'  shift, and go to state 12
    '/'  shift, and go to state 13

    $default  reduce using rule 2 (expr)


state 16

    3 expr: expr '-' term .
    5 term: term . '*' factor
    6     | term . '/' factor

    '*'  shift, and go to state 12
    '/'  shift, and go to state 13

    $default  reduce using rule 3 (expr)


state 17

    5 term: term '*' factor .

    $default  reduce using rule 5 (term)


state 18

    6 term: term '/' factor .

    $default  reduce using rule 6 (term)
